--- a/style.css
+++ b/style.css
@@ -3,29 +3,6 @@
     margin: 0;
     box-sizing: border-box;
 }
-.roboto-regular {
-    font-family: "Roboto", sans-serif;
-    font-weight: 400;
-    font-style: normal;
-  }
-  
-  .roboto-medium {
-    font-family: "Roboto", sans-serif;
-    font-weight: 500;
-    font-style: normal;
-  }
-  
-  .roboto-bold {
-    font-family: "Roboto", sans-serif;
-    font-weight: 700;
-    font-style: normal;
-  }
-  
-  .roboto-black {
-    font-family: "Roboto", sans-serif;
-    font-weight: 900;
-    font-style: normal;
-  }
   @font-face {
     font-family:"Poppins Bold" ;
     src: url(poppins/Poppins-Bold.ttf);
@@ -49,15 +26,15 @@
   @font-face {
     font-family:"Tinos Bold";
     src: url(Tinos/Tinos-Bold.ttf);
-  }
-  
+  }  
 body{
     height: 100%;
-    width: 100%;
+    width: 100%;    
 }
 .container{
     max-width: 1440px;
     margin: auto;
+    overflow: hidden;
 }
 .header{
     display: flex;
@@ -66,11 +43,12 @@ body{
 }
 #header-logo{
     width: 55%;
-    background-color: red;
+    background-image: url("./images/logo.png");
+    background-position: center;
+    background-size: cover;
 }
 #header-logo img{
     width: 100%;    
-    height: 100%;
 }
 #nav{
     display: none;
@@ -94,7 +72,6 @@ body{
 #headerPara-p2{
     font-family: "Poppins Medium";
     font-size: 20px;
-    /* border: 1px solid red; */
     margin-top: -5px;
 }
 .container2{
@@ -108,26 +85,29 @@ body{
     justify-content: end;
     align-items: center;
     padding-right: 37px;
+    overflow: hidden;
+    /* text-shadow: 2px 2px 10px rgba(58, 57, 57, 0.738); */
 }
 .bar a{
     text-decoration: none;
     margin-left: 29px;
     color: rgba(255, 255, 255, 0.822);
     font-size: 19px;
+    text-shadow: 2px 2px 10px rgba(42, 41, 41, 0.595);
 }
 #home{
     background-color: rgb(106, 104, 104);
     padding: 12px 18px;
 }
-/* .section1{
+.section1{
     max-width: 1440px;
     margin: auto;
     display: flex;
     justify-content: space-between;
-    padding: 40.5px 37px 40.5px 37px; 
+    padding: 40.5px 37px 40.5px 37px;
+    overflow: hidden; 
 }
 #section1-img{    
-    background-color: yellow;
     width: 55%;
 }
 #section1-img img{
@@ -155,144 +135,7 @@ body{
     justify-content: center;
     align-items: center;
     padding: 7px 9px 7px 9px;
-}
-#section1-box-part1-para{
-    font-family: "Poppins Medium";
-    font-size: 22px;
-    font-weight: 600;
-    color: rgba(0, 0, 0, 0.767);
-    line-height: 25px;
-    position: absolute;
-    letter-spacing: 1px;
-    top: 9px;    
-    left: 214px;
-}
-#section1-box-part1-para span{
-    font-family: "Poppins Bold";
-    font-size: 33px;
-    color: rgb(13, 71, 94);
-}
-#section1-box-part2{
-    font-family: "Poppins Light";
-    margin-top: 23px;
-    font-weight: 600;
-    font-size: 17px;
-    letter-spacing: -0.3px;
-    padding: 0 0 0 22px;  
-    color: rgba(0, 0, 0, 0.767);  
-}
-#section1-box-part2 span{
-    font-family: "Poppins Medium";
-    font-size: 18px;
-}
-#section1-box-part3{
-    font-family: "Poppins Medium";
-    padding: 0 20px 0 25px;
-    font-weight: 500;
-    display: flex;
-    align-items: center;
-    margin-top: 10px;       
-}
-#section1-box-part3 form{
-   
-}
-#section1-box-part3 label{
-    font-family: "Poppins Bold";
-    letter-spacing: -0.3px;
-    color: rgba(0, 0, 0, 0.628);
-    font-size: 14px;
-    margin-right: 3px;
-}
-#section1-box-part3 input{
-    margin-bottom: 9px;
-    padding: 4px 11px;    
-}
-#name{
-    padding-left: 6px;
-}
-#email{
-    padding-left: 6px;
-}
-#confidential{    
-    margin-left: 20px;
-    height: 65px;
-    position: relative;
-}
-#confidential img{    
-    height: 60px;
-    max-width: 190px;
-    transform: rotate(11deg);    
-}
-#textarea{
-    font-family: "Poppins Bold";
-    margin-left: 4px;
-    font-size: 15px;
-    padding: 5px 0 0 8px;
-    color: rgba(0, 0, 0, 0.695); 
-}
-#section1-box-part4 { 
-    font-family: "Poppins Light";     
-    display: flex;   
-    align-items: center;
-    justify-content: space-between;
-    padding: 0 35px 0 18px;
-    margin-top: 24px;
-}
-#section1-box-part4 p{
-    font-weight: 600;
-    color: rgba(0, 0, 0, 0.608);
-    font-size: 14px;
-    font-family: "Poppins LightItalic";  
-}
-#section1-box-part4-part2{
-    padding: 9px 20px 9px 20px;
-    background-color: rgb(171, 11, 11);
-    display: flex;
-    align-items: center;
-    color: rgba(255, 255, 255, 0.83);
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
-}
-#section1-box-part4-part2 img{
-    height: 12px;
-    width: 10px;
-    margin-left: 10px;    
-} */
- .section1{
-    max-width: 1440px;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    padding: 40.5px 37px 40.5px 37px; 
-}
-#section1-img{    
-    background-color: yellow;
-    width: 55%;
-}
-#section1-img img{
-    width: 100%;
-    height: 100%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 50);
-}
-#section1-box{    
-    background-image: url(./images/section1img2.jpg);
-    background-position: center;
-    background-size: cover;
-    width: 43.25%;  
-    box-shadow: 0 0 20px rgba(0, 0, 0, 50);
-}
-#section1-box-part1{
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-}
-#section1-box-part1 h2{
-    background-color: rgba(128, 0, 0, 0.784);
-    color: white;
-    display: flex;
-    font-size: 27px;
-    justify-content: center;
-    align-items: center;
-    padding: 7px 9px 7px 9px;
+    text-shadow: 2px 2px 10px rgba(42, 41, 41, 0.595);
 }
 #section1-box-part1-para{
     font-family: "Poppins Medium";
@@ -317,7 +160,6 @@ body{
     letter-spacing: -0.3px;
     max-width: 460px;
     margin: auto;
-    background-color: red;
     margin-top: 23px;
     color: rgba(0, 0, 0, 0.767);  
 }
@@ -329,14 +171,10 @@ body{
     font-family: "Poppins Medium";
     max-width: 460px;
     margin: auto;
-    background-color: red;
     font-weight: 500;
     display: flex;
     align-items: center;
     margin-top: 10px;       
-}
-#section1-box-part3 form{
-   
 }
 #section1-box-part3 label{
     font-family: "Poppins Bold";
@@ -413,14 +251,13 @@ body{
     margin-bottom: 30px; 
     color: rgba(0, 0, 0, 0.695); 
     font-family: "Tinos Bold";
+    overflow: hidden;
 }
 #section2-part1{
     max-width: 370px;
     justify-content: space-between;
-    /* padding-bottom: 20px; */
     padding-right: 40px;
     border-right: 1px solid rgba(182, 176, 176, 0.54);
-    /* background-color: red; */
     max-height: 300px;
 }
 #section2-part1 h2{
@@ -438,18 +275,14 @@ body{
     font-family: "Poppins Medium";
     display: flex;
     max-width: 360px;
-    /* background-color: yellow; */
     margin-bottom: 16px;
     margin-top: 10px;
 }
 #section2-part1-paras p{
     margin-bottom: 15px;
-    /* margin-top: 20px; */
     font-size: 15px;
-    /* line-height: 18px; */
 }
 #section2-part1-paras-img{
-    /* background-color: red; */
     width: 250px;
     position: relative;
     margin-left: 30px;
@@ -468,11 +301,12 @@ body{
     margin-left: 132px;
     padding-right: 20px;
     border-top: 2px solid rgba(182, 176, 176, 0.54);
+    
 }
 #section2-part1-buttons img{
     height: 13px;
     width: 11px;
-    margin-left: 5px;       
+    margin-left: 5px;           
 } 
 #click{
     padding: 2px 12px;
@@ -483,9 +317,11 @@ body{
     color: #ffffffd4;
     display: flex;
     align-items: center;
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3), /* bottom-center shadow */
+    5px 0 10px rgba(0, 0, 0, 0.3), /* right-center shadow */
+    -5px 0 10px rgba(0, 0, 0, 0.3);
 }
 #section2-part2{
-    /* background-color: red; */
     max-width: 500px;
 }
 #section2-part2-part1{
@@ -511,7 +347,6 @@ body{
     margin-top: 8px;
 }
 #section2-part2-buttons{    
-    /* background-color: red; */
     width: 210px;
     display: flex;
     align-items: center;
@@ -550,8 +385,6 @@ body{
 }
 #section2-part3{
     max-width: 320px;
-    /* padding: 0 10px 0 10px; */
-    /* background-color: red; */
     max-height: 300px;
     border-left: 1px solid rgba(182, 176, 176, 0.54);
 }
@@ -604,6 +437,7 @@ body{
 .section3{
     max-width: 1440px;
     margin: auto;  
+    overflow: hidden;
 }
 .section3 img{
     width: 100%;
@@ -617,6 +451,7 @@ body{
     margin: auto;
     color: rgba(0, 0, 0, 0.695); 
     font-family: "Tinos Bold";
+    overflow: hidden;
 }
 #section4-part1 span{
     color: maroon;
@@ -635,7 +470,6 @@ body{
     color: white;    
 }
 #box1-para h4{
-    /* background-color: red; */
     align-items: center;
     display: flex;
     margin-left: 120px;
@@ -660,10 +494,8 @@ body{
     margin-top: 90px;
     font-size: 15px;
     color: rgba(128, 128, 128, 0.323);
-    /* text-align: center; */
     display: flex;
     justify-content: center;
-    /* background-color: red; */
 }
 #section4-part2{
     max-width: 620px;    
@@ -740,7 +572,6 @@ body{
     justify-items: center;
 }
 #line2{
-    /* max-width: 1440px; */
     height: 15px;
     background: linear-gradient(to bottom, maroon 50%, black);
     margin-top:50px;
@@ -788,14 +619,12 @@ body{
     #section1-box-part2{
         margin-top: 68px;
         font-size: 35px;
-        /* padding: 0 0 0 50px; */
         max-width: 962px;
     }
     #section1-box-part2 span{
         font-size: 33px;
     }
     #section1-box-part3{
-        /* padding: 0 0 0 50px; */
         max-width: 962px;
         margin-top: 25px;
     }
@@ -828,7 +657,6 @@ body{
     #section1-box-part4{
         margin-bottom: 30px;
         justify-content: space-between;
-        /* padding: 0 12px 0 44px; */
         max-width: 962px;
     }
     #section1-box-part4 p{
@@ -916,9 +744,6 @@ body{
     #section2-part2-part1-img img {
         height: 170px;
     }
-    #section2-part2-part1-content{
-        /* margin-right: 250px; */
-    }
     #section2-part2-buttons{
         max-width: none;
         width: 300px;
@@ -996,7 +821,6 @@ body{
         max-width: 1100px;
         padding: 30px 10px 0 10px;
         flex-direction: column;
-        /* align-items: center; */
     }
     #section4-part1 h2{
         font-size: 55px;
@@ -1073,16 +897,16 @@ body{
     #footer h1{
         font-size: 50px;
         padding-bottom: 10px;
-        width: 500px;
-        
+        width: 500px;        
     }
     #footer div{
         display: flex;
-        justify-content: center;        
+        justify-content: space-between;        
+        width: 382px;
     }
     #footer img {
         height: 75px;
-        margin-right: 20px;        
+        /* margin-right: 20px;         */
     }
 }
 @media(max-width:1000px){
@@ -1279,6 +1103,7 @@ body{
     #footer h1 {
         font-size: 43px;
     }
+    
 }
 @media(max-width:790px)
 {
@@ -1457,6 +1282,9 @@ body{
         height: 16px;
         width: 12px;
     }
+    .section3{
+        max-width: 550px;
+    }
     .section4 {
         max-width: 550px;
     }
@@ -1506,6 +1334,9 @@ body{
     #footer img {
         height: 56px;        
     }
+    #footer div{
+        width: 288px;
+    }
 }
 @media(max-width:495px){
     .container{
@@ -1521,6 +1352,9 @@ body{
     .bar a{
     margin-left: 19px;
     font-size: 6px;
+    }
+    #home {
+    padding: 6px 3px;
     }
     .section1{
     max-width: 350px;
@@ -1570,7 +1404,7 @@ body{
     }
     #confidential {
         height: 33px;
-        margin-left: 9px;
+        margin-left: 3px;
     }
     #textarea {
         font-size: 9.2px;
@@ -1597,7 +1431,11 @@ body{
         margin-bottom: 14px;
     }
     .section2{
-    max-width: 320px;
+    max-width: 350px;
+    margin-bottom: 20px;
+    }
+    #section2-part1{
+        margin-bottom: 27px;
     }
     #section2-part1 h2 {
         font-size: 21px;
@@ -1609,8 +1447,8 @@ body{
         font-size: 11px;
     }
     #section2-part1-paras-img img {
-        height: 135px;
-        width: 112px;
+        height: 116px;
+        width: 90px;
     }
     #click {
         font-size: 12px;
@@ -1624,6 +1462,7 @@ body{
     }
     #section2-part2-part1 p {
         font-size: 11px;
+        padding-bottom: 26px;
     }
     #section2-part2-buttons img {
         height: 10px;
@@ -1634,7 +1473,109 @@ body{
         margin-right: 0px;
     }
     #section2-part2-part1-img img {
+        height: 72px;
+    }
+    #section2-part2-part2 h2 {
+        font-size: 21px;
+    }
+    #section2-part2-part2 p {
+        font-size: 11px;
+        padding-bottom: 26px;
+    }
+    #section2-part2-part2-content{
+        max-width: 160px;
+    }
+    #section2-part2-part2-img img {
         height: 86px;
     }
-
+    #rating {
+        height: 92px;
+    }
+    #medal {
+        height: 92px;
+        margin-left: 23px;
+    }
+    #section2-part3 h2 {
+        font-size: 21px;
+    }
+    #section2-part3 p {
+        font-size: 11px;
+        margin-bottom: 26px;
+    }
+    #section2-part3-buttons img {
+        height: 10px;
+        width: 8px;
+    }
+    .section3{
+        max-width: 350px;
+    }
+    .section4{
+        max-width: 350px;
+    }
+    #section4-part1 h2 {
+        font-size: 21px;
+    }
+    #box1 {
+        max-width: 258px;
+    }
+    #box1-para h4 {
+        font-size: 11px;
+    }
+    #box1-para img {
+        height: 10px;
+        width: 8px;
+    }
+    #section4-part2{
+        margin-bottom: 32px;
+    }
+    #section4-part2 h2 {
+        font-size: 21px;
+    }
+    #section4-part2 p {
+        font-size: 11px;
+        margin-top: 13px;
+        text-align: justify;
+    }
+    #section4-part3-part1 {
+        margin-bottom: 45px;
+    }
+    #section4-part3-part1 h2 {
+        font-size: 21px;
+    }
+    #section4-part3-part1 p {
+        font-size: 11px;
+    }
+    #section4-part3-part1-buttons button {
+        font-size: 12px;
+    }
+    #section4-part3-part1-buttons img {
+        margin-left: 5px;
+        height: 10px;
+    }
+    #section4-rating {
+        height: 92px;
+    }
+    #section4-national {
+        height: 92px;
+        margin-left: 23px;
+    }
+    #section4-images {
+        margin-bottom: 44px;
+        margin-top: 8px;
+    }
+    #footer h1 {
+        font-size: 21px;
+        width: 192px;
+    }
+    #footer img {
+        height: 28px;
+        margin-right: 8px;
+    }
+    #footer div{
+        margin-top: 6px;
+        width: 167px;
+    }
+    #line2{
+        height: 9px;
+    }
 }
