--- a/style.css
+++ b/style.css
@@ -579,7 +579,7 @@ body{
 @media(max-width:1239px){
 
     .container{
-        max-width: 1100px;
+        /* max-width: 1100px; */
     }
     .headerPara{
         margin-right: 0;
@@ -911,7 +911,7 @@ body{
 }
 @media(max-width:1000px){
     .container{
-        max-width: 800px;
+        /* max-width: 800px; */
     }
     #headerPara-p1 {
         font-family: "Poppins Bold";
@@ -1118,7 +1118,7 @@ body{
         width: 50px;
     }
     .container{
-        max-width: 550px;
+        /* max-width: 550px; */
         padding-right: 10px;
     }
     .bar{
@@ -1340,7 +1340,7 @@ body{
 }
 @media(max-width:495px){
     .container{
-    max-width: 400px;
+    /* max-width: 400px; */
     }
     #nav img{
     height: 25px;
