--- a/style.css
+++ b/style.css
@@ -119,14 +119,14 @@ body{
 #section1-img img{
     width: 100%;
     height: 100%;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 50);
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
 }
 #section1-box{    
     background-image: url(./images/section1img2.jpg);
     background-position: center;
     background-size: cover;
     width: 43.25%;  
-    box-shadow: 0 0 20px rgba(0, 0, 0, 50);
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
 }
 #section1-box-part1{
     display: flex;
