--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body{
     background-color: #f0f0f09b;
 }
 .container{
-    max-width: 1260px;
+    /* max-width: 1260px; */
     margin: auto;
     overflow: hidden;
 }
@@ -107,7 +107,7 @@ body{
 }
 #home{
     /* background-color: rgb(106, 104, 104); */
-    padding: 12px 18px;
+    padding: 12px 16.5px;
 }
 #home:hover{
     background-color: rgb(106, 104, 104);
@@ -615,7 +615,7 @@ body{
 @media(max-width:1239px){
 
     .container{
-        max-width: 1100px;
+        /* max-width: 1100px; */
     }
     .headerPara{
         margin-right: 0;
@@ -958,7 +958,7 @@ body{
 }
 @media(max-width:1000px){
     .container{
-        max-width: 900px;
+        /* max-width: 900px; */
     }
     #headerPara-p1 {
         font-family: "Poppins Bold";
@@ -1279,7 +1279,7 @@ body{
     }
     #section2-part1-paras-img{
         margin-left: 0;
-        width: 0px;
+        width: 190px;
     }
     #section2-part1-paras-img img {
         /* height: 186px; */
@@ -1289,7 +1289,7 @@ body{
         font-size: 21px;
     }
     #section2-part1-buttons img {
-        height: 16px;
+        height: 18px;
         width: 12px;
     }
     #section2-part1-buttons{
@@ -1339,7 +1339,7 @@ body{
     #section2-part2-part2 p {
         font-size: 20px;
         text-align: center;
-        padding-bottom: 20px;
+        padding-bottom: 0px;
     }
     #section2-part2-part2-content{
         display: flex;
@@ -1374,6 +1374,8 @@ body{
     #section2-part3 p {
         font-size: 20px;
         margin-bottom: 20px;
+        max-width: 400px;
+        text-align: center;
     }
     #section2-part3-buttons{
         justify-content: center;
@@ -1546,6 +1548,9 @@ body{
         font-size: 14px;
         max-width: 244px;
     }
+    #section2-part1-paras-img{
+        width: 159px;
+    }
     #section2-part1-paras-img img {
         height: 200px;
         width: 159px;
@@ -1580,6 +1585,19 @@ body{
     #medal {
         height: 130px;
         margin-left: 20px;
+    }
+    #section2-part3-part1{
+        flex-direction: column;
+        margin-top: 0;
+    }
+    #section2-part3-part1 img {
+        margin-left: 0;
+    }
+    #rating {
+        height: 166px;
+    }
+    #medal {
+        height: 190px;
     }
     #section2-part3 h2 {
         font-size: 32px;
@@ -1702,9 +1720,12 @@ body{
     }
     #section4-part3-part1 p {
         font-size: 11px;
+        margin-top: 7px;
     }
     #section4-part3-part1-buttons button {
         font-size: 12px;
+        padding: 2px 12px;
+        margin-left: 160px;
     }
     #section4-part3-part1-buttons img {
         margin-left: 5px;
@@ -1727,7 +1748,7 @@ body{
     }
     #footer img {
         height: 28px;
-        margin-right: 8px;
+        margin-right: 0px;
     }
     #footer div{
         margin-top: 6px;
